@@ -513,13 +513,13 @@ public class ChunkGeneratorOverworldHex implements IChunkGenerator
 
         if (!villageHere && this.rand.nextInt(80 / 10) == 0)
         {
-            if (net.minecraftforge.event.terraingen.TerrainGen.populate(this, this.world, this.rand, x, z, villageHere, net.minecraftforge.event.terraingen.PopulateChunkEvent.Populate.EventType.LAVA))
+            if (Configs.worldgen.lavaLakesGenerate && net.minecraftforge.event.terraingen.TerrainGen.populate(this, this.world, this.rand, x, z, villageHere, net.minecraftforge.event.terraingen.PopulateChunkEvent.Populate.EventType.LAVA))
             {
                 int i2 = this.rand.nextInt(16) + 8;
                 int l2 = this.rand.nextInt(this.rand.nextInt(248) + 8);
                 int k3 = this.rand.nextInt(16) + 8;
 
-                if (l2 < this.world.getSeaLevel() || (this.rand.nextInt(80 / 8) == 0 && Configs.worldgen.lavaLakesGenerate))
+                if (l2 < this.world.getSeaLevel() || (this.rand.nextInt(80 / 8) == 0))
                 {
                     (new WorldGenLakes(Blocks.LAVA)).generate(this.world, this.rand, blockpos.add(i2, l2, k3));
                 }
